- Hash-Mode 10400: set native_threads to 32 with Apple GPU's
- Hash-Mode 10410: set native_threads to 32 with Apple GPU's
- Hash-Mode 10420: set native_threads to 32 with Apple GPU's
- Hash-Mode 18200: set native_threads to 32 with Apple GPU's
- Hash-Mode 25400: set native_threads to 32 with Apple GPU's
- Hash-Mode 7500: set native_threads to 32 with Apple GPU's

##
## Technical
##

- Association Attack: Enable module specific pw_min and pw_max settings to avoid false positives in -a 9 attack-mode
- Backend Info: Added local memory size to output
- Kernels: Refactored standard kernel declaration to use a structure holding u32/u64 attributes to reduce the number of attributes
- Tuning Database: Added a warning if a module implements module_extra_tuningdb_block but the installed computing device is not found
- Usage Screen: On windows console, wait for any keypress if usage_mini_print() is used
- User Options: Add new module function module_hash_decode_postprocess() to override hash specific configurations from command line
- OpenCL Backend: added workaround to make optimized kernels work on Apple Silicon
- OpenCL Runtime: Added support to use Apple Silicon compute devices
- OpenCL Runtime: Set default device-type to GPU with Apple Silicon compute devices
- Unit tests: Updated test.sh to set default device-type to CPU with Apple Intel and added -f (--force) option
- OpenCL Backend: moved functions to ext_OpenCL.c and includes to ext_OpenCL.h
- HIP Backend: moved functions to ext_hip.c/ext_hiprtc.c and includes to ext_hip.h/ext_hiprtc.h
- CUDA Backend: moved functions to ext_cuda.c/ext_nvrtc.c and includes to ext_cuda.h/ext_nvrtc.h
- Makefile: updated MACOSX_DEPLOYMENT_TARGET to 10.15 and removed OpenCL framework from LFLAGS_NATIVE on MacOS
- Status code: updated negative status code, usefull in Unit tests engine (test.sh)
- Unit tests: added -r (--runtime) option