@@ -45,6 +45,7 @@
 - Hash-Mode 18200: set native_threads to 32 with Apple GPU's
 - Hash-Mode 25400: set native_threads to 32 with Apple GPU's
 - Hash-Mode 7500: set native_threads to 32 with Apple GPU's
+- Hash-Mode 10500: set native_threads to 32 with Apple GPU's
 
 ##
 ## Technical
